# secure-agent-profile

./: .gitignore  PUBLIC-EXPORT-MANIFEST.json  README.md  pyproject.toml
docs/sdd/: 001-secure-agent-profile.md
examples/secure-agent/dependency-review/: task-brief.md
examples/secure-agent/fixtures/safe-python-service/: README.md  pyproject.toml
examples/secure-agent/fixtures/safe-python-service/tests/: test_math_utils.py
examples/secure-agent/fixtures/unsafe-secrets-repo/: .env.example  README.md
examples/secure-agent/fixtures/unsafe-secrets-repo/config/: production.yaml
examples/secure-agent/guarded-code-change/: task-brief.md
examples/secure-agent/policy-block/: task-brief.md
examples/secure-agent/pr-evidence/: task-brief.md
policy/: secure-agent.policy.yaml
profiles/secure-agent/: README.md  dependency-review.json  guarded-code-change.json  pr-evidence.json
secure_agent_profile/: __init__.py  ao_tasks.py  brief.py  classifiers.py  cli.py  doctor.py  evidence.py  runspec.py  util.py  workflow.py
skills/secure-agent/: closure.md  guarded-plan.md  implementation.md  intake.md  repo-scan.md  risk-classifier.md  security-review.md
tests/profiles/secure_agent/: test_command_risk_classifier.py  test_dependency_review_dry_run.py  test_evidence_pack_secure_agent.py  test_file_scope_classifier.py  test_guarded_code_change_dry_run.py  test_policy_block_workflow.py  test_policy_matrix.py  test_pr_evidence_dry_run.py  test_profile_schema.py  test_replay_secure_agent.py  test_runspec_materialization.py  test_secret_detection.py
(+4 files in other folders)
